# logsdb

./: .pre-commit-config.yaml  CHANGELOG.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/logsdb/: __init__.py  __main__.py  apache_access.py  authfail.py  config.py  core.py  dailyreport.py  maillog.py
