[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "jwodder-logsdb"
dynamic = ["version"]
description = "Record incoming server activity in a database"
#readme = "README.rst"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "John Thorvald Wodder II", email = "jwodder-logsdb@varonathe.org" }
]

keywords = [
    ###
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    ###
    "Typing :: Typed",
]

dependencies = [
    "click ~= 8.0",
    "prettytable ~= 3.13.0",
    "psycopg2-binary ~= 2.7",
    "pydantic ~= 2.0",
    "SQLAlchemy ~= 2.0",
]

[project.scripts]
logsdb = "logsdb.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/logsdb"
"Bug Tracker" = "https://github.com/jwodder/logsdb/issues"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.build.targets.wheel]
packages = ["src/logsdb"]

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
